--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "lodash": "4.17.11",
+    "react": "*",
+    "react-dom": "*",
+    "react-redux": "5.0.7",
+    "react-scripts": "2.1.8",
+    "react-trello": "2.1.3",
+    "redux": "4.0.0",
+    "redux-actions": "2.6.1",
+    "redux-logger": "3.0.6",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watch --updateSnapshot --collectCoverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -21,5 +28,21 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
+    "enzyme-to-json": "^3.3.5",
+    "jest-styled-components": "^6.3.1"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "!**/serviceWorker.js",
+      "!**/setupTests.js",
+      "src/*.js"
+    ],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
+  }
 }
