--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "redux": "4.0.0",
     "redux-actions": "2.6.1",
     "redux-logger": "3.0.6",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.0",
+    "prop-types": "^15.7.2",
+    "redux-saga": "^1.0.2",
+    "reduxsauce": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,7 +36,8 @@
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "enzyme-to-json": "^3.3.5",
-    "jest-styled-components": "^6.3.1"
+    "jest-styled-components": "^6.3.1",
+    "react-test-renderer": "16.8.3"
   },
   "jest": {
     "collectCoverageFrom": [
