--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apisauce": "^1.0.2",
     "lodash": "4.17.11",
+    "prop-types": "^15.7.2",
     "react": "*",
     "react-dom": "*",
     "react-redux": "5.0.7",
@@ -12,11 +14,9 @@
     "redux": "4.0.0",
     "redux-actions": "2.6.1",
     "redux-logger": "3.0.6",
-    "styled-components": "^4.2.0",
-    "prop-types": "^15.7.2",
     "redux-saga": "^1.0.2",
     "reduxsauce": "^1.0.1",
-    "apisauce": "^1.0.2"
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
