--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "*",
     "react-redux": "5.0.7",
     "react-scripts": "2.1.8",
-    "react-trello": "2.1.3",
+    "react-trello": "git+https://github.com/bernardbaker/electivegroup-react-trello.git",
     "redux": "4.0.0",
     "redux-actions": "2.6.1",
     "redux-logger": "3.0.6",
