--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "enzyme-to-json": "^3.3.5",
+    "jest-dom": "^3.1.3",
     "jest-styled-components": "^6.3.1",
-    "react-test-renderer": "16.8.3"
+    "react-testing-library": "^6.1.2"
   },
   "jest": {
     "collectCoverageFrom": [
