Updated use of known warning suppression file.

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
       "!**/serviceWorker.js",
       "!**/setupTests.js",
       "!src/index.js",
+      "!src/suppressWarnings.js",
       "src/**.js"
     ],
     "snapshotSerializers": [
