--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watch --updateSnapshot --collectCoverage",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "commit": "git cz"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,6 +35,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "commitizen": "^3.1.1",
+    "cz-conventional-changelog": "^2.1.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "enzyme-to-json": "^3.3.5",
@@ -55,5 +58,10 @@
   },
   "engines": {
     "node": "10.15.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
+    }
   }
 }
