--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "redux-logger": "3.0.6",
         "redux-saga": "^1.0.2",
         "reduxsauce": "^1.0.1",
-        "styled-components": "^4.2.0"
+        "styled-components": "^4.2.0",
+        "uuidv1": "^1.6.14"
     },
     "scripts": {
         "preinstall": "node preinstall.js",
