chore(package.json): Updated packages.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "fs": "^0.0.1-security",
         "lodash": "4.17.11",
         "prop-types": "^15.7.2",
-        "react": "*",
-        "react-dom": "*",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
         "react-redux": "5.0.7",
         "react-scripts": "2.1.8",
         "react-trello": "https://bernardbaker:ff5e35176173e66849728e7e834dc031dbf18bb3@github.com/bernardbaker/electivegroup-react-trello.git#dev/02-enhance-project",
