--- a/package.json
+++ b/package.json
@@ -1,72 +1,73 @@
 {
-    "name": "electivegroup",
-    "version": "0.1.2",
-    "private": true,
-    "dependencies": {
-        "apisauce": "^1.0.2",
-        "dotenv": "^7.0.0",
-        "fs": "^0.0.1-security",
-        "immutable": "^4.0.0-rc.12",
-        "lodash": "4.17.11",
-        "prop-types": "^15.7.2",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
-        "react-redux": "5.0.7",
-        "react-scripts": "2.1.8",
-        "react-trello": "https://bernardbaker:ff5e35176173e66849728e7e834dc031dbf18bb3@github.com/bernardbaker/electivegroup-react-trello.git#dev/02-enhance-project",
-        "redux": "4.0.0",
-        "redux-actions": "2.6.1",
-        "redux-logger": "3.0.6",
-        "redux-saga": "^1.0.2",
-        "reduxsauce": "^1.0.1",
-        "styled-components": "^4.2.0",
-        "uuidv1": "^1.6.14"
-    },
-    "scripts": {
-        "preinstall": "node preinstall.js",
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test --watch --updateSnapshot --collectCoverage",
-        "eject": "react-scripts eject",
-        "commit": "git cz"
-    },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
-    "browserslist": [
-        ">0.2%",
-        "not dead",
-        "not ie <= 11",
-        "not op_mini all"
+  "name": "electivegroup",
+  "version": "0.1.2",
+  "private": true,
+  "dependencies": {
+    "apisauce": "^1.0.2",
+    "dotenv": "^7.0.0",
+    "fs": "^0.0.1-security",
+    "immutable": "^4.0.0-rc.12",
+    "lodash": "4.17.11",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.0.2",
+    "react-scripts": "2.1.8",
+    "react-trello": "https://bernardbaker:ff5e35176173e66849728e7e834dc031dbf18bb3@github.com/bernardbaker/electivegroup-react-trello.git#dev/02-enhance-project",
+    "redux": "4.0.0",
+    "redux-actions": "2.6.1",
+    "redux-logger": "3.0.6",
+    "redux-saga": "^1.0.2",
+    "reduxsauce": "^1.0.1",
+    "styled-components": "^4.2.0",
+    "uuidv1": "^1.6.14"
+  },
+  "scripts": {
+    "preinstall": "node preinstall.js",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --watch --updateSnapshot --collectCoverage",
+    "eject": "react-scripts eject",
+    "commit": "git cz"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "devDependencies": {
+    "commitizen": "^3.1.1",
+    "cz-conventional-changelog": "^2.1.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
+    "enzyme-to-json": "^3.3.5",
+    "jest-dom": "^3.1.3",
+    "jest-styled-components": "^6.3.1",
+    "react-testing-library": "^6.1.2",
+    "redux-mock-store": "^1.5.3"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "!**/serviceWorker.js",
+      "!**/setupTests.js",
+      "!src/index.js",
+      "!src/suppressWarnings.js",
+      "src/**.js"
     ],
-    "devDependencies": {
-        "commitizen": "^3.1.1",
-        "cz-conventional-changelog": "^2.1.0",
-        "enzyme": "^3.9.0",
-        "enzyme-adapter-react-16": "^1.12.1",
-        "enzyme-to-json": "^3.3.5",
-        "jest-dom": "^3.1.3",
-        "jest-styled-components": "^6.3.1",
-        "react-testing-library": "^6.1.2"
-    },
-    "jest": {
-        "collectCoverageFrom": [
-            "!**/serviceWorker.js",
-            "!**/setupTests.js",
-            "!src/index.js",
-            "!src/suppressWarnings.js",
-            "src/**.js"
-        ],
-        "snapshotSerializers": [
-            "enzyme-to-json/serializer"
-        ]
-    },
-    "engines": {
-        "node": "10.15.1"
-    },
-    "config": {
-        "commitizen": {
-            "path": "node_modules/cz-conventional-changelog"
-        }
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
+  },
+  "engines": {
+    "node": "10.15.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
     }
+  }
 }
